# ray-tracer

./: README.md  pyproject.toml
ray_tracer/: base_tuple.py  camera.py  constants.py  main.py  point.py  utils.py  vector.py  world.py
ray_tracer/classes/: abstract_tuple.py  base_tuple.py  canvas.py  colour.py  computation.py  intersection.py  material.py  matrix.py  point.py  ray.py  transforms.py  vector.py
ray_tracer/lights/: light.py  point_light.py
ray_tracer/objects/: abstract_object.py  cone.py  csg.py  cube.py  cylinder.py  group.py  loader.py  plane.py  shape_tester.py  smooth_triangle.py  sphere.py  test_shape.py  triangle.py
ray_tracer/patterns/: __init__.py  abstract_pattern.py  blend.py  checkerboard.py  gradient.py  noise.py  rings.py  stripes.py  test_pattern.py
ray_tracer/test_toys/: first_scene_test.py  flat_sphere.py  projectile.py  projectile_plot.py  shaded_sphere.py
test/: conftest.py  test_camera.py  test_canvas.py  test_colours.py  test_intersections.py  test_lights.py  test_materials.py  test_matrix.py  test_object_loader.py  test_objects.py  test_patterns.py  test_rays.py  test_transforms.py  test_tuples.py  test_world.py
test_toys/: clock_face.py  cover_image.py  cover_image_parallel.py  first_scene_test.py  flat_sphere.py  patterns.py  projectile_plot.py  second_scene_test.py  shaded_sphere.py  stripes.py  test_astronaut.py  test_blend.py  test_cone.py  test_csg.py  test_cubes.py  test_cylinders.py  test_fresnel.py  test_gradient.py  test_groups.py  test_nested_patterns.py  test_noise.py  test_obj_load_and_render.py  test_reflection.py  test_refraction.py  test_triangles.py
test_toys/obj_files/: astronaut.mtl
