[project]
name = "ray-tracer"
version = "0.1.0"
description = "A software ray tracer written in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
    "opensimplex>=0.4.5.1",
    "pillow>=12.0.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
test = "ray_tracer.main:test"

[dependency-groups]
dev = [
    "pyrefly>=0.40.1",
    "pytest>=8.4.2",
    "pytest-sugar>=1.1.1",
    "ruff>=0.14.4",
]

[tool]

[tool.pyrefly]
project-includes = [
    "ray_tracer",
    "**/*.py*",
    "**/*.ipynb",
]
project-excludes = [
    "**/__pycache__",
    "**/*venv/**",
    "**/.[!/.]*/**",
    "test",
]
search-path = ["ray_tracer"]
site-package-path = [".venv/Lib/site-packages"]
use-ignore-files = true

[tool.ruff]
lint.select = ["ANN", "E", "F", "W", "C", "I"]
lint.extend-select = ["ANN"]
lint.ignore = ["E203"]

# Allow Ruff to auto fix any fixable issues
lint.fixable = ["ALL"]
lint.unfixable = []
line-length = 88

[tool.ruff.lint.isort]


[tool.uv.build-backend]
module-root = ""
module-name = "ray_tracer"

[tool.pytest.ini_options]
testpaths = [
    "test",
]
norecursedirs = ["ray_tracer", ".venv", "**/__pycache__"]
addopts = "--ignore=ray_tracer"

